<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entry.setup.SetupFragment"
    android:padding="10dp">



    <include layout="@layout/header_guidelines" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/header_bottom_guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header_top_guide_line"
        android:text="@string/setup_welcome_message"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/setup_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
        android:text="@string/setup_welcome_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_continue"
        app:layout_constraintTop_toBottomOf="@id/setup_description_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>