<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".entry.setup.EmailInputFragment">


    <ImageView
        android:id="@+id/waiting_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_email_address"
        app:layout_constraintBottom_toTopOf="@+id/header_bottom_guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header_top_guide_line" />

    <include layout="@layout/header_guidelines" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/waiting_image_view"
        app:layout_constraintBottom_toTopOf="@id/email_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:text="@string/email_request_message">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_at"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_description_text_view"
        android:hint="@string/email_edit_text_hint"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
        android:text="@string/setup_continue"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>