<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="10dp"
    android:elevation="5dp"
    app:strokeColor="#BFD2D0D0"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/household_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_house"
            android:drawablePadding="5dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/household_item_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/household_identifier_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            app:layout_constraintStart_toEndOf="@id/household_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/household_text_view"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/TextAppearance.MaterialComponents.Body1"
            tools:text= "name"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/location_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/household_text_view"
            app:layout_constraintBottom_toTopOf="@id/members_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="5dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/household_item_location" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/location_value_text_view"
            android:paddingStart="5dp"
            app:layout_constraintStart_toEndOf="@id/location_text_view"
            app:layout_constraintBaseline_toBaselineOf="@id/location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="identifier"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/members_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_text_view"
            app:layout_constraintBottom_toTopOf="@id/last_updated_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people"
            android:drawablePadding="5dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/survey_item_member" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/members_value_text_view"
            android:paddingStart="5dp"
            app:layout_constraintStart_toEndOf="@id/members_text_view"
            app:layout_constraintBaseline_toBaselineOf="@id/members_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="5"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/last_updated_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/members_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_last_updated"
            android:drawablePadding="5dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/household_item_last_updated" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/last_updated_value_text_view"
            android:paddingStart="5dp"
            app:layout_constraintStart_toEndOf="@id/last_updated_text_view"
            app:layout_constraintBaseline_toBaselineOf="@id/last_updated_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="03/01/2021 17:00"/>


        <!--Temporary-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_in_progress"
            app:tint="#FF6F00"/>





    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>